[package]
name = "file-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
tokio = { version = "1.20", features = ["full"] }
rpb = { git = "https://github.com/disco07/rpb.git", branch = "main" }